Добавлены команды создания и удаления часов

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,7 @@ permission: "chronoclocks.use"
 messages:
   no-perms: "&cУ вас нет прав на использование этой команды"
   clocks-not-found: "&cЧасов с названием %name% не найдено"
+  look-not-exists: "&cДля установки часов посмотрите на определённое направление &7(север, юг, запад, восток)"
   internal-error: "&cПроверьте, что вы правильно ввели все значения"
   create-success: "&aВы успешно создали часы %name%"
   delete-success: "&aВы успешно удалили часы %name%"
@@ -10,10 +11,10 @@ messages:
   usage:
     - '&b---------------------'
     - '&cИспользование:'
-    - '&f/clocks create <название> <формат> <размер цифр> <размер отступа> <блок цифр> <фоновый блок> <шрифт> &9- создать часы'
+    - '&f/clocks create <название> <формат> <часовой пояс> <размер цифр> <размер отступа> <блок цифр> <фоновый блок> <шрифт> &9- создать часы'
     - ' '
     - '&cПример:'
-    - '&f/clocks create simpleclocks HH:mm:ss 8 6 red_wool white_wool Monaco'
+    - '&f/clocks create simpleclocks HH:mm:ss UTC+4 8 6 red_wool white_wool Monaco'
     - ' '
     - '&fРазмер отступа - количество блоков между цифрами. Подбирается отдельно для каждого шрифта и размера. Поэксперементируйте'
     - ' '
