Добавлены команды перемещения часов к игроку и изменения отдельных параметров

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,6 +7,7 @@ messages:
   internal-error: "&cПроверьте, что вы правильно ввели все значения"
   create-success: "&aВы успешно создали часы %name%"
   delete-success: "&aВы успешно удалили часы %name%"
+  edit-success: "&aВы успешно изменили часы %name%"
   movehere-success: "&aВы успешно переместили часы %name%"
   usage:
     - '&b---------------------'
@@ -23,18 +24,4 @@ messages:
     - '&f/clocks movehere <название> &9- переместить часы на место где вы находитесь'
     - '&b---------------------'
 
-clocks:
-  1:
-    timezone: "UTC+4"
-    size: 8
-    spacing: 5
-    pattern: "HH:mm:ss"
-    font: "Comic Sans MS"
-    direction: "north"
-    numbers-material: red_wool
-    background-material: white_wool
-    location:
-      world: world
-      x: 385
-      y: 93
-      z: -530
+clocks: {}
